2005-10-11  Wim Taymans  <wim@fluendo.com>

	* ext/dv/gstdvdemux.c: (gst_dvdemux_handle_sink_event),
	(gst_dvdemux_demux_frame):
	* ext/flac/gstflacdec.c: (gst_flacdec_write):
	* gst/auparse/gstauparse.c: (gst_auparse_chain):
	* gst/avi/gstavidemux.c: (gst_avi_demux_stream_header),
	(gst_avi_demux_handle_seek):
	* gst/goom/gstgoom.c: (gst_goom_event):
	* gst/wavenc/gstwavenc.c: (gst_wavenc_stop_file):
	* gst/wavparse/gstwavparse.c: (gst_wavparse_handle_seek),
	(gst_wavparse_stream_headers), (gst_wavparse_stream_data),
	(gst_wavparse_loop), (gst_wavparse_pad_convert),
	(gst_wavparse_srcpad_event):
	newsegment API update.

2005-10-11  Andy Wingo  <wingo@pobox.com>

	* ext/speex/gstspeexenc.c: Signedness cleanups.

2005-10-10  Edgard Lima <edgard.lima@indt.org.br>

	* PORTED_09:
	* ext/speex/Makefile.am:
	* ext/speex/gstspeex.c:
	* ext/speex/gstspeexenc.c:
	Speexenc ported to 0.9

2005-10-10  Wim Taymans  <wim@fluendo.com>

	* sys/oss/gstosssink.c: (gst_oss_sink_class_init),
	(gst_oss_sink_init), (gst_oss_sink_set_property),
	(gst_oss_sink_get_property), (gst_oss_sink_open),
	(gst_oss_sink_prepare), (gst_oss_sink_reset):
	* sys/oss/gstosssink.h:
	* sys/oss/gstosssrc.c: (gst_oss_src_class_init),
	(gst_oss_src_set_property), (gst_oss_src_init), (gst_oss_src_open),
	(gst_oss_src_prepare):
	Cleanups, make device configurable in the sink, handle and report
	errors.

2005-10-10  Wim Taymans  <wim@fluendo.com>

	* ext/gconf/gstgconfaudiosink.c: (gst_gconf_audio_sink_reset):
	* ext/gconf/gstgconfvideosink.c: (gst_gconf_video_sink_reset):
	Make sure element is NULL before removing from the bin.

2005-10-07  Andy Wingo  <wingo@pobox.com>

	* ext/raw1394/gstdv1394src.c: Make interruptible, so it won't
	block forever in a read().
	(gst_dv1394src_bus_reset): Post a message when the cable is
	unplugged.
	(gst_dv1394src_create, gst_dv1394src_unlock): Remove some prints.
        (gst_dv1394src_bus_reset): Don't unref the message.
